welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:25: error: ')' expected but ';' found.
			setCouleurBrosse(T(u);
                                             ^